<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Exercise2">


    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_of_checkboxes_for_selection" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/cbAndroid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/android" />

        <CheckBox
            android:id="@+id/cbIOS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ios" />

        <CheckBox
            android:id="@+id/cbWindows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/windows" />

        <CheckBox
            android:id="@+id/cbRIM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rim" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/list_of_radio_buttons_for_selection"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbAndroid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/android" />

        <RadioButton
            android:id="@+id/rbIOS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ios"/>

        <RadioButton
            android:id="@+id/rbWindows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/windows" />

        <CheckBox
            android:id="@+id/rbRIM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rim"  />
    </RadioGroup>

    <Button
        android:id="@+id/btnSeeResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/click_here_to_see_results" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_following_were_selected" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_label" />

            <TextView
                android:id="@+id/txtAndroid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ios_label" />

            <TextView
                android:id="@+id/txtIOS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_default_value" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/windows_label" />

            <TextView
                android:id="@+id/txtWindows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_default_value" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rim_label" />

            <TextView
                android:id="@+id/txtRIM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_default_value" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>